1.其他功能都已经做好； 2.ndk部分因为不了解，没有编译成功，以后看情况添加这部分。

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,14 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        // 配置ndk
+//        externalNativeBuild {
+//            cmake {
+//                arguments '-DANDROID_TOOLCHAIN=clang'  // 不同平台设置不同的参数
+//            }
+//        }
+
     }
     buildTypes {
         release {
@@ -16,6 +24,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+//    externalNativeBuild {
+//        cmake {
+//            path "src/main/cpp/CMakeLists.txt"
+//        }
+//    }
+
 }
 
 dependencies {
